<resources>
    <string name="app_name">PDM</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="welcome_login">Welcome, Please Login</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_feedback">Optional: Additional Feedback</string>
    <string name="hint_name">Fullname</string>
    <string name="welcome_reg">Welcome, Please Sign Up</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">New User? Sign Up Now</string>
    <string name="btn_link_to_login">Already have an account?</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="hint_cpassword">Re-type password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_changepw">Change Password</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter registered e-mail address to receive reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="hint_fname">E.g. John</string>
    <string name="hint_address">E.g. 28, St Michael’s Road,Colombo 03</string>
    <string name="btn_addProfile">Save</string>
    <string name="hint_lname">E.g. Smith</string>
    <string name="btn_submit">Submit</string>
    <string name="hint_num">000 000 000</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="address">Address</string>
    <string name="phone">Mobile Phone Number</string>
    <string name="title_activity_promotion">PromotionActivity</string>
    <string name="rat">Please rate your experience</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_em_map">Map</string>
    <string name="title_activity_spare_parts_admin">Spare Parts Admin Activity</string>
    <string name="addtocart">Add</string>


    <string-array name="sp_manufacturer_array">
        <item>Toyota</item>
        <item>Mazda</item>
        <item>Honda</item>
        <item>BMW</item>
        <item>Benz</item>
    </string-array>
</resources>
