<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mayur.pdm.RatingActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rat"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginTop="-50dp"
            android:textSize="18dp"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="1"
        android:layout_marginTop="10dp"
        />

        <TextView
            android:id="@+id/RatingScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Awesome. I love it"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/hint_feedback"
            android:lines="5"
            android:gravity="top"
            android:textColor="@android:color/black"
            android:inputType="textCapSentences|textMultiLine"
            android:background="@drawable/textbackground"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_submit"
            android:textColor="@android:color/black" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
